# biotracker_backgroundsubtraction_tracker

./: .clang-format  .gitignore  .gitlab-ci.py  .gitlab-ci.yml  CMakeLists.txt
Src/: BioTrackerPlugin.cpp  BioTrackerPlugin.h  BioTrackerPlugin.json.in  CMakeLists.txt  Config.cpp  Config.h  PluginContext.cpp  PluginContext.h  plugin.json.in
Src/Controller/: ControllerTrackedComponent.cpp  ControllerTrackedComponent.h  ControllerTrackingAlgorithm.cpp  ControllerTrackingAlgorithm.h
Src/Model/: BioTrackerTrackingAlgorithm.cpp  BioTrackerTrackingAlgorithm.h  TrackerParameter.cpp  TrackerParameter.h
Src/Model/Network/: TcpListener.cpp  TcpListener.h
Src/Model/TrackedComponents/: TrackedComponentFactory.cpp  TrackedComponentFactory.h  TrackedElement.cpp  TrackedElement.h  TrackedTrajectory.cpp  TrackedTrajectory.h
Src/Model/TrackedComponents/pose/: FishPose.cpp  FishPose.h  IPose.h
Src/Model/TrackingAlgorithm/: NN2dMapper.cpp  NN2dMapper.h
Src/Model/TrackingAlgorithm/imageProcessor/cvblobs/: BlobContour.cpp  BlobContour.h  BlobLibraryConfiguration.h  BlobOperators.cpp  BlobOperators.h  BlobProperties.cpp  BlobProperties.h  BlobResult.cpp  BlobResult.h  ComponentLabeling.cpp  ComponentLabeling.h  blob.cpp  blob.h
Src/Model/TrackingAlgorithm/imageProcessor/detector/: IDetector.cpp  IDetector.h
Src/Model/TrackingAlgorithm/imageProcessor/detector/blob/: BlobPose.cpp  BlobPose.h
Src/Model/TrackingAlgorithm/imageProcessor/detector/blob/cvBlob/: BlobsDetector.cpp  BlobsDetector.h
Src/Model/TrackingAlgorithm/imageProcessor/detector/blob/simpleBlob/: SimpleBlobsDetector.cpp  SimpleBlobsDetector.h
Src/Model/TrackingAlgorithm/imageProcessor/detector/contour/: ContourPose.cpp  ContourPose.h  ContoursDetector.cpp  ContoursDetector.h
Src/Model/TrackingAlgorithm/imageProcessor/preprocessor/: CustomBackgroundSubtractor.cpp  CustomBackgroundSubtractor.h  ImagePreProcessor.cpp  ImagePreProcessor.h
Src/View/: TrackedElementView.cpp  TrackedElementView.h  TrackerParameterView.cpp  TrackerParameterView.h  TrackerParameterView.ui
Src/helper/: CvHelper.cpp  CvHelper.h  StringHelper.cpp  StringHelper.h
ci/: configure.py  package.py  prepare.py
cmake/WIX/: WIX.template.in
